--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-IMPORTANTE!
-Para executar este projeto é necessária a biblioteca PyGTK. Se você usa Linux, provavelmente já a possui, caso contrário baixe-a neste link:
+ï»¿IMPORTANTE!
+Para executar este projeto Ã© necessÃ¡ria a biblioteca PyGTK. Se vocÃª usa Linux, provavelmente jÃ¡ a possui, caso contrÃ¡rio baixe-a neste link:
 http://www.pygtk.org/downloads.html
