--- a/README
+++ b/README
@@ -1,3 +1,18 @@
 ﻿IMPORTANTE!
-Para executar este projeto é necessária a biblioteca PyGTK. Se você usa Linux, provavelmente já a possui, caso contrário baixe-a neste link:
+- Para executar este projeto é necessária a biblioteca PyGTK. Se você usa Linux, provavelmente já a possui, caso contrário baixe-a neste link:
 http://www.pygtk.org/downloads.html
+- Por enquanto, não é possível conversar pela rede sem alterar o código, apenas numa mesma máquina
+
+Para usar:
+1- Execute o arquivo "servidor.bat" ou "servidor.sh" (dependendo de seu ambiente)
+2- Também é possível executar diretamente servidor.py
+3- Na tela do servidor, clique em Iniciar
+4- Execute o arquivo "cliente.bat" ou "cliente.sh" (ou ainda "cliente.py" diretamente)
+5- Use o usuário "teste" e senha "123" para entrar
+6- Converse, de preferência abra outro cliente
+
+TODO:
+- Hospedar o banco de dados na web
+- Hospedar o servidor na web, com IP fixo ou dinâmico
+- Criar uma página para a criação de contas
+- Implementar o botão "Crie sua conta" no cliente
