--- a/README
+++ b/README
@@ -11,8 +11,8 @@ PARA USAR:
 5- Converse, de preferência abra outro cliente
 
 TODO:
-- Fazer algo útil com a lista de contatos (adicionar uma lista na tela principal do cliente)
-- Permitir conversas privadas (abrir nova janela para cada conversa)
+- Definir a arquitetura do servidor que irá rodar no cliente (para IM)
+- Implementar tela de conversa privada
 - Permitir que um usuário adicione outro como contato (criar um botão na tela principal para isso)
 - Quando um usuário fica offline, a lista de contatos de cada um de seus amigos deve ser atualizada com tal informação
 - Hospedar o banco de dados na web
@@ -21,7 +21,7 @@ TODO:
 - Implementar o botão "Crie sua conta" no cliente
 
 FIXME:
-- servidor.py:
+- Servidor:
 	- para fechar o servidor, é preciso apertar o botão Parar duas vezes
 	- o BD não funciona em sistemas Linux
 
